2011-11-30  Alexey Proskuryakov  <ap@apple.com>

        Remove an unneeded argument from FrameLoaderClient::download
        https://bugs.webkit.org/show_bug.cgi?id=73486

        Reviewed by Andreas Kling.

        * WebFrame.cpp:
        (WebFrame::download):
        * WebFrame.h:
        Updated for the change.

2011-11-26  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: remove disconnectFromBackend from the protocol.
        https://bugs.webkit.org/show_bug.cgi?id=73127

        Reviewed by Yury Semikhatsky.

        * WebCoreSupport/WebInspectorClient.cpp:
        (WebInspectorClient::inspectorDestroyed):
        (WebInspectorClient::closeInspectorFrontend):
        * WebCoreSupport/WebInspectorClient.h:

2011-11-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r101193.
        http://trac.webkit.org/changeset/101193
        https://bugs.webkit.org/show_bug.cgi?id=73158

        Breaks Windows and Qt minimal. (Requested by pfeldman on
        #webkit).

        * WebCoreSupport/WebInspectorClient.cpp:
        (WebInspectorClient::inspectorDestroyed):
        (WebInspectorFrontendClient::disconnectFromBackend):
        * WebCoreSupport/WebInspectorClient.h:

2011-11-26  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: remove disconnectFromBackend from the protocol.
        https://bugs.webkit.org/show_bug.cgi?id=73127

        Reviewed by Yury Semikhatsky.

        * WebCoreSupport/WebInspectorClient.cpp:
        (WebInspectorClient::inspectorDestroyed):
        (WebInspectorClient::closeInspectorFrontend):
        * WebCoreSupport/WebInspectorClient.h:

2011-11-22  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: remove Inspector::bringToFront from the protocol.
        https://bugs.webkit.org/show_bug.cgi?id=72937

        Reviewed by Yury Semikhatsky.

        * WebCoreSupport/WebInspectorClient.cpp:
        (WebInspectorClient::bringFrontendToFront):