@@ -4584,6 +4584,15 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
     settings->setFixedFontFamily(AtomicString(str, SysStringLen(str)));
     SysFreeString(str);
 
+    COMPtr<IWebPreferencesPrivate> prefsPrivate(Query, preferences);
+    if (prefsPrivate) {
+        hr = prefsPrivate->localStorageDatabasePath(&str);
+        if (FAILED(hr))
+            return hr;
+        settings->setLocalStorageDatabasePath(String(str, SysStringLen(str)));
+        SysFreeString(str);
+    }
+
     hr = preferences->pictographFontFamily(&str);
     if (FAILED(hr))
         return hr;
@@ -4737,7 +4746,6 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
     settings->setAVFoundationEnabled(enabled);
 #endif
 
-    COMPtr<IWebPreferencesPrivate> prefsPrivate(Query, preferences);
     if (prefsPrivate) {
         hr = prefsPrivate->authorAndUserStylesEnabled(&enabled);
         if (FAILED(hr))
